# gh-graph-explorer

./: .gitignore  ANALYSIS_SUMMARY.md  Dockerfile  Dockerfile.local  LICENSE.md  README.md  action.yml  build_graph.py  docker-compose.yml  docker-entrypoint.sh  github_graph_tools.py  graphexplore.ipynb  main.py  mcp.py  mcp_server.py  pyproject.toml  requirements.txt  run-local.sh
data/: extended_cobalt_config_20250627_161855.json  extended_cobalt_config_20250627_174710.json  extended_cobalt_summary_20250627_161855.json  extended_cobalt_summary_20250627_174710.json  repos.json
examples/: repos.json  workflow-example.yml
full_analysis/: full_analysis.ipynb
notebooks/: HOW_TO_ADD_REPOS.md  README-cobalt-analysis.md  add_repos_example.py  cobalt-repo-analysis.ipynb  cobalt_analysis.py  convert_to_notebook.py  crypto-repos-analysis.ipynb  crypto_organization_analysis.json  crypto_organization_analyzer.py  crypto_repo_analyzer.py  custom_repos_example.json  extended_cobalt_analysis.py  full_repo_activity_analyzer.py  github_username_activity_analyzer.py  github_username_analyzer_colab.py  graph-explorer-template.ipynb  interactive-crypto-dashboard.ipynb  interactive_crypto_analyzer.py  interactive_demo.py  repo_activity_analyzer.py  repo_activity_summary_20250717_152957.json
notebooks/data/: cobalt_cobalt_repos.json  (+2 more)
old/: graphexplore.ipynb
src/: __init__.py  cobalt_analyzer.py  collector.py  csv_loader.py  edge.py  edge_factory.py  example_usage.py  example_usage_collector.py  graph_analyzer.py  loader.py  neo4j_loader.py  save_strategy.py  user_work_fetcher.py
(+12 files in other folders)
