[project]
name = "gh-graph-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "fastmcp>=2.2.1",
    "gql>=3.5.2",
    "ipywidgets>=8.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "neo4j>=5.18.0",
    "neo4j-driver",
    "networkx>=3.1.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=5.15.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.0",
    "pyvis>=0.3.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
